--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
   text-align: center;
   font-family: 'Press Start 2P', cursive;
   font-size: 2.5rem;
-  margin:  25% auto 3%;
+  margin:  8% auto 3%;
   width: 50%;
   color: #FEF2BF;
 }
@@ -65,10 +65,10 @@ body {
   text-align: center;
   font-family: 'Press Start 2P', cursive;
   color: #FEF2BF;
-  /* margin:  auto; */
+  margin:  3% auto 5% ;
   line-height: 2;
   font-size: 1rem;
-  width: 40%;
+  width: 60%;
 }
 .instructions-gif{
   text-align: center;
@@ -77,8 +77,12 @@ body {
 }
 
 @media (max-width: 700px) {
+  #instructions{
+    margin-top: 20%;
+  }
 .instructions{
   font-size: 2rem;
-  width: 50%;
+  width: 60%;
+  margin: 20% auto 3%;
 }
 }
