--- a/styles.css
+++ b/styles.css
@@ -53,22 +53,18 @@ body {
 }
 
 #instructions{
-  text-align: center;
   font-family: 'Press Start 2P', cursive;
   font-size: 2.5rem;
-  margin:  8% auto 3%;
-  width: 50%;
+  padding: 50px;
   color: #FEF2BF;
 }
 
 .instructions{
-  text-align: center;
   font-family: 'Press Start 2P', cursive;
   color: #FEF2BF;
-  margin:  3% auto 5% ;
-  line-height: 2;
+  line-height: 3;
   font-size: 1rem;
-  width: 60%;
+  padding: 50px;
 }
 .instructions-gif{
   text-align: center;
@@ -76,13 +72,13 @@ body {
   margin: auto;
 }
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   #instructions{
-    margin-top: 20%;
+    margin-top: 150px;
   }
 .instructions{
   font-size: 2rem;
   width: 60%;
   margin: 20% auto 3%;
 }
-}
+} */
